8.5 fix nav overlay text alignment

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -53,7 +53,6 @@
 
 .nav-item-overlay {
   display: flex;
-  justify-content: center;
   align-items: center;
   height: 100%;
   width: 100%;
@@ -62,19 +61,19 @@
 
 .overlay-header {
   position: relative;
-  top: 0;
+  top: 40%;
   letter-spacing: 1.5px;
-  font-size: 2.8rem;
+  font-size: 3.2rem;
   transition: all 0.3s ease;
 }
 
 .hover-fadeUp {
   position: relative;
-  top: 15%;
+  top: 70%;
+  max-width: 400px;
   opacity: 0;
   transition: all 0.3s ease;
-  font-size: 1.6rem;
-  width: 80%;
+  font-size: 2rem;
 }
 
 
